--- a/style.css
+++ b/style.css
@@ -11,7 +11,8 @@
     background-color: #333333;
     background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(img/flowers2.jpg) no-repeat center;
     background-size: cover;
-    font-size: 16px;
+    background-attachment: fixed;
+    font-size: 20px;
   }
   
   h1,
@@ -34,8 +35,10 @@
   }
 
   .container {
+    display: none;
     max-width: 80vw;
     margin: 30vh auto;
+    text-align: center;
     /* background-color: #fff; */
     /* border-radius: 30px;
     box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
@@ -44,4 +47,12 @@
 
   .main-text {
       color: #fff;
+  }
+
+  .password-form {
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    max-width: 80vw;
   }
